added in empty cards for data

--- a/public/player.html
+++ b/public/player.html
@@ -18,7 +18,15 @@
     </nav>
 
     <!-- stats will be inserted below here -->
+    <section class="player-stats">
+        <div class="player-stats-card">
+        </div>
+    </section>
     
+   
+    <script type="text/javascript" src="player.js"></script>
+    
+
 </body>
 
 </html>
