--- a/public/team.html
+++ b/public/team.html
@@ -17,8 +17,15 @@
         <a href="/team">Team Stats</a>
     </nav>
 
-    <!-- stats will be inserted below here -->
+    <section class="team-stats">
+        <div class="team-stats-card">
+        </div>
+    </section>
     
+   
+    <script type="text/javascript" src="team.js"></script>
+    
+
 </body>
 
 </html>
