updated href sources

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
 <body>
   <nav>
     <a href="/">Homepage</a>
-    <a href="/player">Player Stats</a>
-    <a href="/team">Team Stats</a>
+    <a href="player.html">Player Stats</a>
+    <a href="team.html">Team Stats</a>
   </nav>
  
     <div class="ui container workout">
@@ -40,8 +40,8 @@
           <div>
             <div class="workout-stats"></div>
             <div class="buttons">
-              <a href="/team" class="huge ui blue button">Random Team</a>
-              <a href="/player" class="huge positive ui button">Random Player</a>
+              <a href="team.html" class="huge ui blue button">Random Team</a>
+              <a href="player.html" class="huge positive ui button">Random Player</a>
             </div>
           </div>
         </div>
