--- a/public/player.html
+++ b/public/player.html
@@ -20,6 +20,7 @@
     <!-- stats will be inserted below here -->
     <section class="player-stats">
         <div class="player-stats-card">
+            <p>test</p>
         </div>
     </section>
     
