--- a/public/index.html
+++ b/public/index.html
@@ -12,29 +12,13 @@
 
 <body>
   <nav>
-    <a href="/">Homepage</a>
+    <a href="index.html">Homepage</a>
     <a href="player.html">Player Stats</a>
   </nav>
  
     <div class="ui container workout">
       <div class="ui raised card m-auto">
-        <div class="prev-workout">
-            
-            <!-- add in specific player selector later -->
-          
-            <!-- <h3>Select a Specific Player/Team</h3>
-          <div class="d-flex">
-          <div class="dropdown mr-1">
-            <button type="button" class="btn btn-secondary dropdown-toggle" id="dropdownMenuOffset" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
-              Offset
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuOffset">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </div>
-          </div> -->
+        <div class="player-selector">
           <h3>Stat Selector</h3>
           <div>
             <div class="workout-stats"></div>
@@ -42,9 +26,6 @@
               <a href="player.html" class="huge positive ui button">Random Player</a>
             </div>
           </div>
-        </div>
-        <div class="new-workout">
-          <h3>Create Your First Workout</h3>
         </div>
       </div>
   </div>
