--- a/public/player.html
+++ b/public/player.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav>
-        <a href="/">Homepage</a>
+        <a href="index.html">Homepage</a>
     </nav>
 
     <!-- stats will be inserted below here -->
