reworked data schema

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <body>
   <nav>
     <a href="index.html">Homepage</a>
-    <a href="player.html">Player Stats</a>
+    <a href="allPlayers.html">Player Stats</a>
   </nav>
  
     <div class="ui container workout">
