--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <body>
   <nav>
     <a href="index.html">Homepage</a>
-    <a href="allPlayers.html">Player Stats</a>
+    <a href="allPlayers.html">All Players Stats</a>
   </nav>
  
     <div class="ui container workout">
@@ -24,6 +24,7 @@
             <div class="workout-stats"></div>
             <div class="buttons">
               <a href="player.html" class="huge positive ui button">Random Player</a>
+              <a href="allPlayers.html" class="huge ui button">All Players</a>
             </div>
           </div>
         </div>
