--- a/public/player.html
+++ b/public/player.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
     <link rel="stylesheet" href="playerStyle.css" />
-    <title>Player Stats</title>
+    <title>Random Player Stats</title>
 </head>
 
 <body>
