updated pckg json scripts

--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,8 @@
       </div>
   </div>
 
-  <script src="/api.js"></script>
-  <script src="/index.js"></script>
+  <script src="../routes/apiRoutes.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
