--- a/public/allPlayers.html
+++ b/public/allPlayers.html
@@ -7,14 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
     <link rel="stylesheet" href="allPlayerStyle.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <title>Random Player Stats</title>
 </head>
 
 <body>
-    <nav>
+    <nav class="navbar navbar-dark bg-dark">
         <a href="index.html">Homepage</a>
-    </nav>
+        <a href="player.html">Random Player Stats</a>
+      </nav>
 
     <!-- stats will be inserted below here -->
     <section class="all-player-stats">
