--- a/public/index.html
+++ b/public/index.html
@@ -7,21 +7,23 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
   <title>NBA Stats</title>
 </head>
 
 <body>
-  <nav>
+  <nav class="navbar navbar-dark bg-dark">
     <a href="index.html">Homepage</a>
     <a href="allPlayers.html">All Players Stats</a>
+    <a href="player.html">Random Player Stats</a>
   </nav>
  
-    <div class="ui container workout">
+    <div class="ui container">
       <div class="ui raised card m-auto">
         <div class="player-selector">
           <h3>Stat Selector</h3>
           <div>
-            <div class="workout-stats"></div>
             <div class="buttons">
               <a href="player.html" class="huge positive ui button">Random Player</a>
               <a href="allPlayers.html" class="huge ui button">All Players</a>
