added in some custom styling

--- a/public/allPlayers.html
+++ b/public/allPlayers.html
@@ -14,8 +14,8 @@
 
 <body>
     <nav class="navbar navbar-dark bg-dark">
-        <a href="index.html">Homepage</a>
-        <a href="player.html">Random Player Stats</a>
+        <a class="link" href="index.html">Homepage</a>
+        <a class="link" href="player.html">Random Player Stats</a>
       </nav>
 
     <!-- stats will be inserted below here -->
