--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,11 @@
   <title>NBA Stats</title>
 </head>
 
-<body>
+<body class="body">
   <nav class="navbar navbar-dark bg-dark">
-    <a href="index.html">Homepage</a>
-    <a href="allPlayers.html">All Players Stats</a>
-    <a href="player.html">Random Player Stats</a>
+    <a class="link" href="index.html">Homepage</a>
+    <a class="link" href="allPlayers.html">All Players Stats</a>
+    <a class="link" href="player.html">Random Player Stats</a>
   </nav>
     <br>
 
