--- a/public/player.html
+++ b/public/player.html
@@ -14,8 +14,8 @@
 
 <body>
     <nav class="navbar navbar-dark bg-dark">
-        <a href="index.html">Homepage</a>
-        <a href="allPlayers.html">All Players Stats</a>
+        <a class="link" href="index.html">Homepage</a>
+        <a class="link" href="allPlayers.html">All Players Stats</a>
       </nav>
 
     <!-- stats will be inserted below here -->
