simple styling changes

--- a/public/allPlayers.html
+++ b/public/allPlayers.html
@@ -12,7 +12,7 @@
     <title>Random Player Stats</title>
 </head>
 
-<body>
+<body class="body">
     <nav class="navbar navbar-dark bg-dark">
         <a class="link" href="index.html">Homepage</a>
         <a class="link" href="player.html">Random Player Stats</a>
