--- a/public/player.html
+++ b/public/player.html
@@ -12,12 +12,14 @@
     <title>Random Player Stats</title>
 </head>
 
-<body>
+<body class="body">
     <nav class="navbar navbar-dark bg-dark">
         <a class="link" href="index.html">Homepage</a>
         <a class="link" href="allPlayers.html">All Players Stats</a>
       </nav>
 
+      <br>
+      <br>
     <!-- stats will be inserted below here -->
     <section class="player-stats">
         <div class="player-stats-card">
