added in script sources

--- a/public/allPlayers.html
+++ b/public/allPlayers.html
@@ -24,7 +24,7 @@
         </div>
     </section>
     
-   
+    <script src="../routes/apiRoutes.js"></script>
     <script type="text/javascript" src="allPlayers.js"></script>
     
 
