--- a/public/player.html
+++ b/public/player.html
@@ -26,7 +26,7 @@
         </div>
     </section>
     
-   
+    <script src="../routes/apiRoutes.js"></script>
     <script type="text/javascript" src="player.js"></script>
     
 
